Fix scrollbar background colors

--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,8 @@ li { margin: 15px 0; }
 
 iframe { 
   border: none; 
-  overflow-y: scroll; 
+  overflow-y: scroll;
+  width: 340px;
 }
 
 iframe::-webkit-scrollbar {
@@ -76,12 +77,12 @@ iframe::-webkit-scrollbar:horizontal {
 
 iframe::-webkit-scrollbar-thumb {
     border-radius: 8px;
-    border: 2px solid #3d8de4; /* should match background, can't be transparent */
+    border: 2px solid #3d8de4;
     background-color: #3de1e4;
 }
 
 iframe::-webkit-scrollbar-track { 
-    background-color: #3DB7E4; 
+    background-color: #003270; 
 } 
 
 
